@@ -1,0 +1,2 @@
+$FormHelper.HiddenField("somearg")
+$FormHelper.TextField("otherarg")
